--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <script src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Take a Photo</title> <!-- Add title element -->
+    <script src="https://js.jotform.com/JotFormCustomWidget.min.js"></script>
 </head>
 <body>
     <div id="main">
